testing new bootstrap on yana page.

--- a/views/yanabear.hbs
+++ b/views/yanabear.hbs
@@ -12867,8 +12867,9 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="#page-top">            <img style="width: 150px"  src="../assets/img/portfolio/fullsize/yanabear.png" alt="Yana Bear" /></a>
-      
+      <a class="navbar-brand" href="#page-top"> <img style="width: 150px"
+          src="../assets/img/portfolio/fullsize/yanabear.png" alt="Yana Bear" /></a>
+
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -12878,8 +12879,11 @@
           <li class="nav-item"><a class="nav-link" href="#about">Lift LLC</a></li>
           <li class="nav-item"><a class="nav-link" href="#portfolio">PicklePodz LLC</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Generation Sports Cons</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#services"> <img style="width: 30px; margin-left:-5px; padding-right: 3px" class="img-fluid" src="../assets/img/portfolio/fullsize/bearicon.png" alt="..." />Yana Bear</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services"> <i style=' padding-right: 10px; color: black' class="fa-solid fa-user-astronaut fa-xl"></i>Benny Bombs</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#services"> <img
+                style="width: 30px; margin-left:-5px; padding-right: 3px" class="img-fluid"
+                src="../assets/img/portfolio/fullsize/bearicon.png" alt="..." />Yana Bear</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services"> <i style=' padding-right: 10px; color: black'
+                class="fa-solid fa-user-astronaut fa-xl"></i>Benny Bombs</a></li>
         </ul>
       </div>
     </div>
@@ -12894,10 +12898,12 @@
           <hr class="divider" />
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 mb-5">Ready for some fun?? Follow Yana on her journey as a proffesional pickleball player!</p>
+          <p class="text-white-75 mb-5">Ready for some fun?? Follow Yana on her journey as a proffesional pickleball
+            player!</p>
           <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-          <a class="btn btn-primary btn-xl" href="#about"><i style='padding-right: 10px' class="fa-brands fa-instagram fa-xl"></i>
-Please Follow!</a>
+          <a class="btn btn-primary btn-xl" href="#about"><i style='padding-right: 10px'
+              class="fa-brands fa-instagram fa-xl"></i>
+            Please Follow!</a>
         </div>
       </div>
     </div>
@@ -12958,56 +12964,91 @@ Please Follow!</a>
   <div id="portfolio">
     <div class="container-fluid p-0">
       <div class="row g-0">
-        <div class="col-lg-4 col-sm-6">
-          
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-            <img class="img-fluid" src="../assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+        <div class="col-lg-3 col-sm-6">
+
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanayellnpb.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanayellnpb.png" alt="..." />
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yananationals.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yananationals.png" alt="..." />
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-            <img class="img-fluid" src="../assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanany.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanany.png" alt="..." />
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-            <img class="img-fluid" src="../assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanah8.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanah8.png" alt="..." />
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-            <img class="img-fluid" src="../assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+       <div class="col-lg-3 col-sm-6">
+
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanayellnpb.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanayellnpb.png" alt="..." />
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-            <img class="img-fluid" src="../assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-            <div class="portfolio-box-caption p-3">
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yananationals.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yananationals.png" alt="..." />
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">Category</div>
+              <div class="project-name">Project Name</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanany.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanany.png" alt="..." />
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">Category</div>
+              <div class="project-name">Project Name</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <a class="portfolio-box" style="height: 400px; object-fit: cover"
+            href="../assets/img/portfolio/fullsize/yanah8.png" title="Project Name">
+            <img class="img-fluid" style="height: 400px; object-fit: cover"
+              src="../assets/img/portfolio/fullsize/yanah8.png" alt="..." />
+            <div class="portfolio-box-caption">
               <div class="project-category text-white-50">Category</div>
               <div class="project-name">Project Name</div>
             </div>
