change url for gen sports.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -657,7 +657,7 @@
         <ul class="navbar-nav ms-auto my-2 my-lg-0">
           <li class="nav-item"><a class="nav-link active" href="/">Lift LLC</a></li>
           <li class="nav-item"><a class="nav-link " href="/picklepodzllc">PicklePodz LLC</a></li>
-          <li class="nav-item"><a class="nav-link" href="/gensportsco">Generation Sports Co</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://generationsportsconstruction.com/">Generation Sports Co</a></li>
           <li class="nav-item"><a class="nav-link " href="/yanabear"> <img
                 style="width: 30px; margin-left:-5px; padding-right: 3px" class="img-fluid"
                 src="../assets/img/portfolio/fullsize/bearicon.png" alt="..." />Yana Bear</a></li>
