--- a/views/index.hbs
+++ b/views/index.hbs
@@ -248,7 +248,7 @@ https://templatemo.com/tm-562-space-dynamic
       </div>
       <div class="row">
         <div style="height: 400px" class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a >
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
                 <p>"Ben is unbelievable. He is quick, creative, and reliable. The application exeeded expectations."</p>
@@ -265,10 +265,10 @@ https://templatemo.com/tm-562-space-dynamic
           </a>
         </div>
         <div style="height: 400px" class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a >
              <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
-                <p>"His knowledge of data and Tableau is rock solid. He answered all our questions and deliver quickly!"</p>
+                <p>"His knowledge of data and Tableau is rock solid. He answered all our questions and delivered quickly!"</p>
                                 <h4>- Drew</h4>
 
               </div>
