update scroll to full width.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -421,6 +421,7 @@
   </div>
   <div class="scroller" data-direction="left" data-speed="slow">
     <div class="scroller__inner">
+            <img class="scrollingtech" src="assets3/images/scrollblank.png" alt="" />
       <img class="scrollingtech" src="assets3/images/scrollcss.png" alt="" />
       <img class="scrollingtech" src="assets3/images/scrollfirebase.png" alt="" />
       <img class="scrollingtech" src="assets3/images/scrollheroku.png" alt="" />
@@ -434,6 +435,20 @@
       <img class="scrollingtech" src="assets3/images/scrollreact.png" alt="" />
       <img class="scrollingtech" src="assets3/images/scrollsqlserver.png" alt="" />
 
+      <img class="scrollingtech" src="assets3/images/scrollblank.png" alt="" />
+      
+      <img class="scrollingtech" src="assets3/images/scrollcss.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollfirebase.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollheroku.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrolltableau.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollhtml.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrolljs.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollmysql.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollnode.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollpostgres.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollpython.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollreact.png" alt="" />
+      <img class="scrollingtech" src="assets3/images/scrollsqlserver.png" alt="" />
 
     </div>
   </div>
@@ -448,6 +463,21 @@
       </div>
     </div>
   <div class="scroller__inner">
+    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
     <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
     <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
     <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
