--- a/views/index.hbs
+++ b/views/index.hbs
@@ -419,7 +419,7 @@
       </div>
     </div>
   </div>
-  <div class="scroller" data-direction="left" data-speed="slow">
+  <div class="scroller" data-direction="left" data-speed="fast">
     <div class="scroller__inner">
             <img class="scrollingtech" src="assets3/images/scrollblank.png" alt="" />
       <img class="scrollingtech" src="assets3/images/scrollcss.png" alt="" />
