fix tech scroll.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -410,82 +410,94 @@
       </div>
     </div>
   </div> --}}
-  <div style="text-align: center; justify-content: center; align-items: center;" class="container">
-    <div style="text-align: center; justify-content: center; align-items: center;" class="row">
-      <div >
-        <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-          <h2 style="text-align: center"><em>Technologies</em> </h2>
-        </div>
-      </div>
-    </div>
-  </div>
+  
   <div class="scroller" data-direction="left" data-speed="fast">
-    <div class="scroller__inner">
-            <img class="scrollingtech" src="assets3/images/scrollblank.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollcss.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollfirebase.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollheroku.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrolltableau.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollhtml.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrolljs.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollmysql.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollnode.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollpostgres.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollpython.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollreact.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollsqlserver.png" alt="" />
-
-      <img class="scrollingtech" src="assets3/images/scrollblank.png" alt="" />
-      
-      <img class="scrollingtech" src="assets3/images/scrollcss.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollfirebase.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollheroku.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrolltableau.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollhtml.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrolljs.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollmysql.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollnode.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollpostgres.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollpython.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollreact.png" alt="" />
-      <img class="scrollingtech" src="assets3/images/scrollsqlserver.png" alt="" />
-
-    </div>
-  </div>
-  <div class="scroller" data-direction="right" data-speed="slow">
     <div style="text-align: center; justify-content: center; align-items: center;" class="container">
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
-        <div >
+        <div>
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
             <h2 style="text-align: center"> <span>Clients</span></h2>
           </div>
         </div>
       </div>
     </div>
-  <div class="scroller__inner">
-    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
-    <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+    <div class="scroller__inner">
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollcss.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfirebase.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollheroku.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollhtml.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolljs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmysql.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnode.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpostgres.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpython.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+      
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollcss.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfirebase.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollheroku.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollhtml.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolljs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmysql.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnode.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpostgres.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpython.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+   
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollcss.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfirebase.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollheroku.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollhtml.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolljs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmysql.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnode.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpostgres.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollpython.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollreact.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollsqlserver.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrolltableau.png" alt="" />
+    </div>
   </div>
-  </div>
+  <div class="scroller" data-direction="right" data-speed="slow">
+    <div style="text-align: center; justify-content: center; align-items: center;" class="container">
+      <div style="text-align: center; justify-content: center; align-items: center;" class="row">
+        <div>
+          <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
+            <h2 style="text-align: center"> <span>Clients</span></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="scroller__inner">
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollblank.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollbcbs.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollfbkc.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollnike.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollmlp.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollaci.png" alt="" />
+      <img class="scrollingcompanies" src="assets3/images/scrollppl.png" alt="" />
+    </div>
   </div>
   <div id="contact" class="contact-us section">
     <div class="container">
