--- a/views/index.hbs
+++ b/views/index.hbs
@@ -411,7 +411,7 @@
     </div>
   </div> --}}
   
-  <div class="scroller" data-direction="left" data-speed="fast">
+  <div class="scroller" data-direction="right" data-speed="fast">
     <div style="text-align: center; justify-content: center; align-items: center;" class="container">
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
         <div>
