--- a/views/index.hbs
+++ b/views/index.hbs
@@ -416,7 +416,7 @@
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
         <div>
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2 style="text-align: center"> <span>Clients</span></h2>
+            <h2 style="text-align: center"> <span>Technologies</span></h2>
           </div>
         </div>
       </div>
