update tech header.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -257,7 +257,7 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2><em>Projects</em> &amp; <span>client Testimonials</span></h2>
+            <h2><em>Projects</em> &amp; <span>Client Testimonials</span></h2>
           </div>
         </div>
       </div>
@@ -416,7 +416,7 @@
       <div style="text-align: center; justify-content: center; align-items: center;" class="row">
         <div>
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2 style="text-align: center"> <span>Technologies</span></h2>
+            <h2 style="text-align: center"> <em>Technologies</em></h2>
           </div>
         </div>
       </div>
